[package]
name = "glass"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
glass-engine = { path = "crates/engine" }
glass-http = { path = "crates/engine/test/http" }
glass-ping = { path = "crates/engine/test/ping" }
glass-pipeline = { path = "crates/pipeline" }
env_logger = "0.8"
log = { version = "0.4", default-features = false }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.1", features = ["full"] }
wasi-cap-std-sync = "0.28"

[build-dependencies]
glass-build = { path = "crates/build" }

[workspace]
members = [
    "crates/build",
    "crates/engine",
    "crates/engine/test/http",
    "crates/engine/test/ping",
    "crates/pipeline",
]
