[package]
name = "grtest"
version = "0.10.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wacm = { path = "../../../../wacm/crates/wacm/" }
witx-bindgen-rust = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "0e087ecc73dd4b74ff48ff28302dd410b10d8e3c"}

[workspace]

[wasi]
registry_url = "http://localhost:8000/v1"

[wasi.components]
glass_runtime = { bindle = "glass_runtime/0.1.0", direction = "export" }
# markdown = { bindle = "markdown/0.6.0" }
