[package]
name    = "glass-http"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow                = "1.0"
async-trait           = "0.1"
http                  = "0.2"
glass-engine          = { path = "../../" }
hyper                 = { version = "0.14", features = ["full"] }
log                   = { version = "0.4", default-features = false }
wasmtime              = "0.30"
witx-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "0b80c6df4715130c963f8d09b3d99a7c95dd8e63" }

[dev-dependencies]
tokio = "1.5.0"

[lib]
doctest = false
