[package]
name    = "glass-ping"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow                = "1.0"
async-trait           = "0.1"
chrono                = "0.4"
glass-engine          = { path = "../../" }
log                   = { version = "0.4", default-features = false }
tokio                 = "1.5.0"
witx-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/witx-bindgen", rev = "0b80c6df4715130c963f8d09b3d99a7c95dd8e63" }

[lib]
doctest = false
